--- a/.github/workflows/runtimes.yml
+++ b/.github/workflows/runtimes.yml
@@ -28,10 +28,10 @@ jobs:
           NODE_VERSION: 24.13.0
 
       - name: Run bun
-        run: bun test.ts
+        run: bun test.test.ts
 
       - name: Run deno
-        run: deno test.ts
+        run: deno test.test.ts
 
       - name: Run nodejs
-        run: node test.ts
+        run: node test.test.ts
